--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="container">
             <div id="branding">
                 <img src="images/logo.png" alt="Logo">
-                <h1>Online Store</h1>
+                <h1>Andy's Chips</h1>
             </div>
             <nav>
                 <ul>
