Changed the entire cart.html code
Updated with the newest version

--- a/cart.html
+++ b/cart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cart - Online Store</title>
+    <title>Cart - Andy's Chips</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         @font-face {
@@ -28,6 +28,18 @@
             padding: 0;
             background-color: #f8f9fa;
         }
+        h1 { 
+            position: left; 
+            top: 40%; 
+            left: 40%; 
+
+            font-size: 40px; 
+            font-family: 'Uni Sans', Arial, sans-serif;
+            background: linear-gradient(to right, #f32170, 
+                    #ff6b08, #cf23cf, #eedd44); 
+            -webkit-text-fill-color: transparent; 
+            -webkit-background-clip: text; 
+        } 
         .container {
             width: 80%;
             margin: auto;
@@ -36,9 +48,11 @@
         .header {
             background: #333;
             color: #fff;
-            padding-top: 30px;
+            padding-top: 10px;
             min-height: 70px;
-            border-bottom: #0779e4 3px solid;
+            border-bottom: #0779e4 10px solid;
+            display: flex;
+            align-items: center;
         }
         .header a {
             color: #fff;
@@ -49,6 +63,9 @@
         .header ul {
             padding: 0;
             list-style: none;
+            display: flex;
+            margin: 0;
+            align-items: center;
         }
         .header li {
             float: left;
@@ -57,6 +74,10 @@
         }
         .header #branding {
             float: left;
+        }
+        .header #branding img {
+            height: 50px;
+            margin-right: 20px;
         }
         .header #branding h1 {
             margin: 0;
@@ -93,15 +114,35 @@
             margin: 5px 0;
         }
         .cart-item button {
-            padding: 10px 20px;
-            background-color: #0779e4;
+            background: #0779e4;
             color: #fff;
             border: none;
-            border-radius: 4px;
+            padding: 10px 20px;
             cursor: pointer;
         }
         .cart-item button:hover {
-            background-color: #055bb5;
+            background: #005bb5;
+        }
+        .checkout {
+            margin-top: 20px;
+        }
+        .checkout input[type="text"], .checkout input[type="email"], .checkout input[type="number"] {
+            width: calc(100% - 22px);
+            padding: 10px;
+            margin: 5px 0;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+        .checkout button {
+            background: #0779e4;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+        .checkout button:hover {
+            background: #005bb5;
         }
     </style>
 </head>
@@ -109,7 +150,6 @@
     <header class="header">
         <div class="container">
             <div id="branding">
-                <img src="images/logo.png" alt="Logo">
                 <h1>Andy's Chips</h1>
             </div>
             <nav>
@@ -125,26 +165,69 @@
     <div class="container">
         <div class="cart">
             <h2>Your Cart</h2>
-            <div class="cart-item">
-                <img src="https://via.placeholder.com/100" alt="Product Image">
-                <div>
-                    <h3>Product Name 1</h3>
-                    <p>Quantity: 1</p>
-                    <p>Price: $10.00</p>
-                    <button>Remove</button>
-                </div>
+            <div id="cart-items">
+                <!-- Cart items will be dynamically added here -->
             </div>
-            <div class="cart-item">
-                <img src="https://via.placeholder.com/100" alt="Product Image">
-                <div>
-                    <h3>Product Name 2</h3>
-                    <p>Quantity: 2</p>
-                    <p>Price: $20.00</p>
-                    <button>Remove</button>
-                </div>
+            <div class="checkout">
+                <h2>Checkout</h2>
+                <form id="checkout-form">
+                    <input type="text" id="name" placeholder="Full Name" required>
+                    <input type="email" id="email" placeholder="Email Address" required>
+                    <input type="text" id="address" placeholder="Shipping Address" required>
+                    <input type="number" id="card-number" placeholder="Card Number" required>
+                    <input type="text" id="card-expiry" placeholder="Expiry Date (MM/YY)" required>
+                    <input type="number" id="card-cvc" placeholder="CVC" required>
+                    <button type="button" onclick="processPayment()">Pay Now</button>
+                </form>
             </div>
-            <!-- Add more cart items as needed -->
         </div>
     </div>
+    <script>
+        const cartItems = JSON.parse(localStorage.getItem('cartItems')) || [];
+
+        function displayCartItems() {
+            const cartContainer = document.getElementById('cart-items');
+            cartContainer.innerHTML = '';
+            cartItems.forEach(item => {
+                const cartItem = document.createElement('div');
+                cartItem.classList.add('cart-item');
+                cartItem.innerHTML = `
+                    <img src="${item.image}" alt="${item.name}">
+                    <div>
+                        <h3>${item.name}</h3>
+                        <p>Price: $${item.price}</p>
+                        <button onclick="removeFromCart('${item.name}')">Remove</button>
+                    </div>
+                `;
+                cartContainer.appendChild(cartItem);
+            });
+        }
+
+        function removeFromCart(itemName) {
+            const updatedCartItems = cartItems.filter(item => item.name !== itemName);
+            localStorage.setItem('cartItems', JSON.stringify(updatedCartItems));
+            displayCartItems();
+        }
+
+        function processPayment() {
+            const name = document.getElementById('name').value;
+            const email = document.getElementById('email').value;
+            const address = document.getElementById('address').value;
+            const cardNumber = document.getElementById('card-number').value;
+            const cardExpiry = document.getElementById('card-expiry').value;
+            const cardCVC = document.getElementById('card-cvc').value;
+
+            if (name && email && address && cardNumber && cardExpiry && cardCVC) {
+                alert('Payment successful!');
+                localStorage.removeItem('cartItems');
+                displayCartItems();
+                document.getElementById('checkout-form').reset();
+            } else {
+                alert('Please fill in all the details.');
+            }
+        }
+
+        displayCartItems();
+    </script>
 </body>
 </html>
