--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products - Online Store</title>
+    <title>Products - Andy's Chips</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         @font-face {
@@ -28,6 +28,18 @@
             padding: 0;
             background-color: #f8f9fa;
         }
+        h1 { 
+            position: left; 
+            top: 40%; 
+            left: 40%; 
+
+            font-size: 40px; 
+            font-family: 'Uni Sans', Arial, sans-serif;
+            background: linear-gradient(to right, #f32170, 
+                    #ff6b08, #cf23cf, #eedd44); 
+            -webkit-text-fill-color: transparent; 
+            -webkit-background-clip: text; 
+        } 
         .container {
             width: 80%;
             margin: auto;
@@ -36,9 +48,11 @@
         .header {
             background: #333;
             color: #fff;
-            padding-top: 30px;
+            padding-top: 10px;
             min-height: 70px;
-            border-bottom: #0779e4 3px solid;
+            border-bottom: #0779e4 10px solid;
+            display: flex;
+            align-items: center;
         }
         .header a {
             color: #fff;
@@ -49,6 +63,9 @@
         .header ul {
             padding: 0;
             list-style: none;
+            display: flex;
+            margin: 0;
+            align-items: center;
         }
         .header li {
             float: left;
@@ -57,6 +74,10 @@
         }
         .header #branding {
             float: left;
+        }
+        .header #branding img {
+            height: 50px;
+            margin-right: 20px;
         }
         .header #branding h1 {
             margin: 0;
@@ -67,41 +88,40 @@
             margin-top: 10px;
         }
         .products {
+            display: flex;
+            flex-wrap: wrap;
+            margin-top: 20px;
+        }
+        .product {
             background: #fff;
-            padding: 20px;
-            margin: 20px 0;
             border: 1px solid #ddd;
             border-radius: 4px;
+            padding: 20px;
+            margin: 10px;
+            flex: 1 1 calc(33% - 40px);
+            box-sizing: border-box;
+            text-align: center;
         }
-        .product-item {
-            display: flex;
-            align-items: center;
-            margin-bottom: 20px;
+        .product img {
+            max-width: 100%;
+            height: auto;
         }
-        .product-item img {
-            margin-right: 20px;
-            width: 100px;
-            height: 100px;
-        }
-        .product-item h3 {
-            margin: 0;
-            padding: 0;
-            font-size: 24px;
+        .product h3 {
             font-family: 'Uni Sans Bold', Arial, sans-serif;
+            margin: 10px 0;
         }
-        .product-item p {
-            margin: 5px 0;
+        .product p {
+            margin: 10px 0;
         }
-        .product-item button {
-            padding: 10px 20px;
-            background-color: #0779e4;
+        .product button {
+            background: #0779e4;
             color: #fff;
             border: none;
-            border-radius: 4px;
+            padding: 10px 20px;
             cursor: pointer;
         }
-        .product-item button:hover {
-            background-color: #055bb5;
+        .product button:hover {
+            background: #005bb5;
         }
     </style>
 </head>
@@ -109,7 +129,6 @@
     <header class="header">
         <div class="container">
             <div id="branding">
-                <img src="images/logo.png" alt="Logo">
                 <h1>Andy's Chips</h1>
             </div>
             <nav>
@@ -124,25 +143,28 @@
     </header>
     <div class="container">
         <div class="products">
-            <h2>Our Products</h2>
-            <div class="product-item">
-                <img src="https://via.placeholder.com/100" alt="Product Image">
-                <div>
-                    <h3>Product Name 1</h3>
-                    <p>Description of product 1.</p>
-                    <button>Add to Cart</button>
-                </div>
+            <div class="product">
+                <img src="https://via.placeholder.com/200" alt="Product Image">
+                <h3>Product Name 1</h3>
+                <p>Price: $10.00</p>
+                <button onclick="addToCart('Product Name 1', 10.00, 'https://via.placeholder.com/200')">Add to Cart</button>
             </div>
-            <div class="product-item">
-                <img src="https://via.placeholder.com/100" alt="Product Image">
-                <div>
-                    <h3>Product Name 2</h3>
-                    <p>Description of product 2.</p>
-                    <button>Add to Cart</button>
-                </div>
+            <div class="product">
+                <img src="https://via.placeholder.com/200" alt="Product Image">
+                <h3>Product Name 2</h3>
+                <p>Price: $20.00</p>
+                <button onclick="addToCart('Product Name 2', 20.00, 'https://via.placeholder.com/200')">Add to Cart</button>
             </div>
             <!-- Add more products as needed -->
         </div>
     </div>
+    <script>
+        function addToCart(name, price, image) {
+            const cartItems = JSON.parse(localStorage.getItem('cartItems')) || [];
+            cartItems.push({ name, price, image });
+            localStorage.setItem('cartItems', JSON.stringify(cartItems));
+            alert(`${name} has been added to the cart.`);
+        }
+    </script>
 </body>
 </html>
