--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Andy's Chips</title>
+    <title>The Team - Andy's Chips</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         @font-face {
@@ -26,9 +26,69 @@
             font-family: 'Uni Sans', Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #353535;
-            color: #fff;
+            background-color: #2b2b2b;
+            color: #ffffff;
         }
+        h1 { 
+            position: left; 
+            top: 40%; 
+            left: 40%; 
+
+            font-size: 40px; 
+            font-family: 'Uni Sans', Arial, sans-serif;
+            background: linear-gradient(to right, #f32170, 
+                    #ff6b08, #cf23cf, #eedd44); 
+            -webkit-text-fill-color: transparent; 
+            -webkit-background-clip: text; 
+        } 
+        p2 { 
+            position: left; 
+            top: 40%; 
+            left: 40%; 
+
+            font-size: 17px; 
+            font-family: 'Uni Sans', Arial, sans-serif;
+            background: linear-gradient(to right, #00c2a2, 
+                    #00c2a2, #007997); 
+            -webkit-text-fill-color: transparent; 
+            -webkit-background-clip: text; 
+        } 
+        h4 { 
+            position: left; 
+            top: 40%; 
+            left: 40%; 
+
+            font-size: 24px; 
+            font-family: 'Uni Sans', Arial, sans-serif;
+            background: linear-gradient(to right, #f32170, 
+                    #ff6b08, #cf23cf, #eedd44); 
+            -webkit-text-fill-color: transparent; 
+            -webkit-background-clip: text; 
+        } 
+        h5 { 
+            position: left; 
+            top: 40%; 
+            left: 40%; 
+
+            font-size: 24px; 
+            font-family: 'Uni Sans', Arial, sans-serif;
+            background: linear-gradient(to right, #00ff22, 
+                    #23cf8d); 
+            -webkit-text-fill-color: transparent; 
+            -webkit-background-clip: text; 
+        } 
+        h6 { 
+            position: left; 
+            top: 40%; 
+            left: 40%; 
+
+            font-size: 24px; 
+            font-family: 'Uni Sans', Arial, sans-serif;
+            background: linear-gradient(to right, #008d07, 
+                    #005f15); 
+            -webkit-text-fill-color: transparent; 
+            -webkit-background-clip: text; 
+        } 
         .container {
             width: 80%;
             margin: auto;
@@ -36,20 +96,25 @@
         }
         .header {
             background: #333;
-            color: #fff;
-            padding-top: 30px;
-            min-height: 70px;
-            border-bottom: #0779e4 12px solid;
+            color: #ffffff;
+            padding-top:0px;
+            min-height: 90px;
+            border-bottom: #0779e4 10px solid;
+            display: flex;
+            align-items: center;
         }
         .header a {
             color: #fff;
             text-decoration: none;
             text-transform: uppercase;
-            font-size: 16px;
+            font-size: px;
         }
         .header ul {
             padding: 0;
             list-style: none;
+            display: flex;
+            margin: 0;
+            align-items: center;
         }
         .header li {
             float: left;
@@ -91,11 +156,32 @@
             padding: 0;
             font-size: 24px;
             font-family: 'Uni Sans Bold', Arial, sans-serif;
-            color: #16a0a0;
+            color: #ffffff;
+        }
+        .team-member h4 {
+            margin: 0;
+            padding: 0;
+            font-size: 24px;
+            font-family: 'Uni Sans Bold', Arial, sans-serif;
+            color: #ffffff;
+        }
+        .team-member h5 {
+            margin: 0;
+            padding: 0;
+            font-size: 24px;
+            font-family: 'Uni Sans Bold', Arial, sans-serif;
+            color: #ffffff;
+        }
+        .team-member h6 {
+            margin: 0;
+            padding: 0;
+            font-size: 24px;
+            font-family: 'Uni Sans Bold', Arial, sans-serif;
+            color: #ffffff;
         }
         .team-member p {
             margin: 5px 0;
-            color: #fff;
+            color: #ffffff;
         }
     </style>
 </head>
@@ -103,7 +189,6 @@
     <header class="header">
         <div class="container">
             <div id="branding">
-                <img src="images/logo.png" alt="Logo">
                 <h1>Andy's Chips</h1>
             </div>
             <nav>
@@ -115,6 +200,7 @@
                 </ul>
             </nav>
         </div>
+    </div>
     </header>
     <div class="container">
         <h2>Welcome to the staff team!</h2>
@@ -125,37 +211,37 @@
             <div class="team-member">
                 <img src="https://cdn.discordapp.com/avatars/1207676769998610445/dbdeba6185308a23552ae9aa76b0f45b.png?size=2048&format=webp&quality=lossless&width=0&height=230" alt="Team Member Photo">
                 <div>
-                    <h3>Andries van der Westhuizen</h3>
-                    <p><b>Owner</b></p>
-                    <p>"Life's too short to stress over little things"</p>
+                    <h5>Andries van der Westhuizen</h5>
+                    <p><b>Owner & CEO</b></p>
+                    <p2>💭 "Life's too short to stress over little things" 💭</p2>
                     <p>Andries is the visionary behind our online store and ensures everything runs smoothly.</p>
                 </div>
             </div>
             <div class="team-member">
                 <img src="https://cdn.discordapp.com/avatars/702366613038694430/a_d7bcadc2b2446a309c71120f36732a7b.gif?size=2048&width=0&height=230" alt="Team Member Photo">
                 <div>
-                    <h3>Tyous</h3>
+                    <h6>Tyous</h6>
                     <p><b>Co-Owner & Marketing Team</b></p>
                     <p>Tyous is in charge of most of the things, also ensures the best marketing we can offer.</p>
-                    <p>Placeholder Caption - Requested by user</p>
+                    <p2>💭 Placeholder Caption - Requested by user 💭</p2>
                 </div>
             </div>
             <div class="team-member">
                 <img src="https://cdn.discordapp.com/avatars/311844298180001793/90ed5bd683b9a560eaf46a2babd3d12e.png?size=2048&format=webp&quality=lossless&width=0&height=230" alt="Team Member Photo">
                 <div>
-                    <h3>Saint</h3>
+                    <h3><font color="#5b29ff">Saint</font></h3>
                     <p><b>Marketing Team</b></p>
-                    <p>"I used to think that I had tried it all. Well, that was until I tasted Andy's Chips. Now I know that I've tried the best and that's all that matters"</p>
+                    <p2>💭 "I used to think that I had tried it all. Well, that was until I tasted Andy's Chips. Now I know that I've tried the best and that's all that matters" 💭</p2>
                     <p>Saint is in charge of our marketing system, ensuring the best marketing we can offer.</p>
                 </div>
             </div>
             <div class="team-member">
                 <img src="https://cdn.discordapp.com/avatars/637318487215308800/a_7a10a8602a324a3987eb688dd4d17b90.gif?size=2048&width=0&height=230" alt="Team Member Photo">
                 <div>
-                    <h3>Gemmi</h3>
+                    <h4><font color="#ff54e8">Gemmie</font></h4>
                     <p><b>Designer</b></p>
-                    <p>Gemmi designs our packaging, and our logo.</p>
-                    <p>Placeholder Caption - Requested by user</p>
+                    <p>Gemmie designs our packaging, and our logo.</p>
+                    <p2>💭 Placeholder Caption - Requested by user 💭</p2>
                 </div>
             </div>
         </div>
