--- a/team.html
+++ b/team.html
@@ -222,8 +222,8 @@
                 <div>
                     <h6>Tyous</h6>
                     <p><b>Co-Owner & Marketing Team</b></p>
+                    <p2>💭 "Inspiring moments, one step at a time." 💭</p2>
                     <p>Tyous is in charge of most of the things, also ensures the best marketing we can offer.</p>
-                    <p2>💭 Placeholder Caption - Requested by user 💭</p2>
                 </div>
             </div>
             <div class="team-member">
