--- a/products.html
+++ b/products.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products - Andy's Chips</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/logo.png" type="image/png">
     <style>
         @font-face {
             font-family: 'Uni Sans';
@@ -26,12 +27,11 @@
             font-family: 'Uni Sans', Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f8f9fa;
+            background: linear-gradient(to right, #00ff22, 
+                   #23cf8d); 
         }
         h1 { 
-            position: left; 
-            top: 40%; 
-            left: 40%; 
+            position: left;
 
             font-size: 40px; 
             font-family: 'Uni Sans', Arial, sans-serif;
@@ -48,17 +48,17 @@
         .header {
             background: #333;
             color: #fff;
-            padding-top: 10px;
-            min-height: 70px;
+            padding-top: 0px;
+            min-height: 90px;
             border-bottom: #0779e4 10px solid;
             display: flex;
             align-items: center;
         }
         .header a {
-            color: #fff;
+            color: #000000;
             text-decoration: none;
             text-transform: uppercase;
-            font-size: 16px;
+            font-size: 18px;
         }
         .header ul {
             padding: 0;
@@ -76,12 +76,16 @@
             float: left;
         }
         .header #branding img {
-            height: 50px;
-            margin-right: 20px;
+            height: 47.6px; /* Adjust this value to control the logo size */
+            width: auto;
+            margin-right: 5px;
+            vertical-align: middle;
         }
         .header #branding h1 {
             margin: 0;
             font-family: 'Uni Sans Bold', Arial, sans-serif;
+            display: inline-block;
+            vertical-align: middle;
         }
         .header nav {
             float: right;
@@ -93,8 +97,8 @@
             margin-top: 20px;
         }
         .product {
-            background: #fff;
-            border: 1px solid #ddd;
+            background: #4b4b4b;
+            border: 3px solid #ddd;
             border-radius: 4px;
             padding: 20px;
             margin: 10px;
@@ -129,6 +133,7 @@
     <header class="header">
         <div class="container">
             <div id="branding">
+                <img src="images/logo.png" alt="A's-C Logo">
                 <h1>Andy's Chips</h1>
             </div>
             <nav>
