--- a/cart.html
+++ b/cart.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart - Andy's Chips</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/logo.png" type="image/png">
     <style>
         @font-face {
             font-family: 'Uni Sans';
@@ -26,7 +27,8 @@
             font-family: 'Uni Sans', Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f8f9fa;
+            background: linear-gradient(to right, #00ff22, 
+                   #23cf8d); 
         }
         h1 { 
             position: left; 
@@ -48,17 +50,17 @@
         .header {
             background: #333;
             color: #fff;
-            padding-top: 10px;
-            min-height: 70px;
+            padding-top: 0px;
+            min-height: 90px;
             border-bottom: #0779e4 10px solid;
             display: flex;
             align-items: center;
         }
         .header a {
-            color: #fff;
+            color: #000000;
             text-decoration: none;
             text-transform: uppercase;
-            font-size: 16px;
+            font-size: 18px;
         }
         .header ul {
             padding: 0;
@@ -76,22 +78,26 @@
             float: left;
         }
         .header #branding img {
-            height: 50px;
-            margin-right: 20px;
+            height: 47.6px; /* Adjust this value to control the logo size */
+            width: auto;
+            margin-right: 5px;
+            vertical-align: middle;
         }
         .header #branding h1 {
             margin: 0;
             font-family: 'Uni Sans Bold', Arial, sans-serif;
+            display: inline-block;
+            vertical-align: middle;
         }
         .header nav {
             float: right;
             margin-top: 10px;
         }
         .cart {
-            background: #fff;
+            background: #1f1f1f;
             padding: 20px;
             margin: 20px 0;
-            border: 1px solid #ddd;
+            border: 4px solid #ddd;
             border-radius: 4px;
         }
         .cart-item {
@@ -130,7 +136,7 @@
             width: calc(100% - 22px);
             padding: 10px;
             margin: 5px 0;
-            border: 1px solid #ddd;
+            border: 3px solid #ddd;
             border-radius: 4px;
         }
         .checkout button {
@@ -150,6 +156,7 @@
     <header class="header">
         <div class="container">
             <div id="branding">
+                <img src="images/logo.png" alt="A's-C Logo">
                 <h1>Andy's Chips</h1>
             </div>
             <nav>
