--- a/team.html
+++ b/team.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Team - Andy's Chips</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/logo.png" type="image/png">
     <style>
         @font-face {
             font-family: 'Uni Sans';
@@ -26,8 +27,10 @@
             font-family: 'Uni Sans', Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #2b2b2b;
-            color: #ffffff;
+            background: linear-gradient(to right, #00ff22, 
+                   #23cf8d); 
+            color: #000000;
+            text-align: center;
         }
         h1 { 
             position: left; 
@@ -38,6 +41,16 @@
             font-family: 'Uni Sans', Arial, sans-serif;
             background: linear-gradient(to right, #f32170, 
                     #ff6b08, #cf23cf, #eedd44); 
+            -webkit-text-fill-color: transparent; 
+            -webkit-background-clip: text; 
+        } 
+        h2 { 
+            position: left; 
+
+            font-size: 28px; 
+            font-family: 'Uni Sans', Arial, sans-serif;
+            background: linear-gradient(to right, #ff7e5f, 
+            #feb47b, #ffdd00); 
             -webkit-text-fill-color: transparent; 
             -webkit-background-clip: text; 
         } 
@@ -104,10 +117,10 @@
             align-items: center;
         }
         .header a {
-            color: #fff;
+            color: #000000;
             text-decoration: none;
             text-transform: uppercase;
-            font-size: px;
+            font-size: 18px;
         }
         .header ul {
             padding: 0;
@@ -124,9 +137,17 @@
         .header #branding {
             float: left;
         }
+        .header #branding img {
+            height: 47.6px; /* Adjust this value to control the logo size */
+            width: auto;
+            margin-right: 5px;
+            vertical-align: middle;
+        }
         .header #branding h1 {
             margin: 0;
             font-family: 'Uni Sans Bold', Arial, sans-serif;
+            display: inline-block;
+            vertical-align: middle;
         }
         .header nav {
             float: right;
@@ -138,7 +159,11 @@
             margin: 20px 0;
             border: 5px solid #00c3ff;
             border-radius: 4px;
-            color: #11aeca;
+            color: #000000;
+            text-align: left;
+        }
+        .team-section h2 {
+            text-align: center;
         }
         .team-member {
             display: flex;
@@ -189,6 +214,7 @@
     <header class="header">
         <div class="container">
             <div id="branding">
+                <img src="images/logo.png" alt="A's-C Logo">
                 <h1>Andy's Chips</h1>
             </div>
             <nav>
