Updated products.html: added new products, and changed the names

--- a/products.html
+++ b/products.html
@@ -107,7 +107,7 @@
             text-align: center;
         }
         .product img {
-            max-width: 100%;
+            max-width: 23%;
             height: auto;
         }
         .product h3 {
@@ -150,17 +150,32 @@
         <div class="products">
             <div class="product">
                 <img src="https://via.placeholder.com/200" alt="Product Image">
-                <h3>Product Name 1</h3>
+                <h3>Andy's Chips - Salt & Vinager Flavour</h3>
                 <p>Price: $10.00</p>
-                <button onclick="addToCart('Product Name 1', 10.00, 'https://via.placeholder.com/200')">Add to Cart</button>
+                <button onclick="addToCart('Salt & Vinager Flavour', 10.00, 'https://via.placeholder.com/200')">Add to Cart</button>
             </div>
             <div class="product">
                 <img src="https://via.placeholder.com/200" alt="Product Image">
-                <h3>Product Name 2</h3>
-                <p>Price: $20.00</p>
-                <button onclick="addToCart('Product Name 2', 20.00, 'https://via.placeholder.com/200')">Add to Cart</button>
+                <h3>Andy's Chips - Barbeque Flavour</h3>
+                <p>Price: $10.00</p>
+                <button onclick="addToCart('Barbeque Flavour', 10.00, 'https://via.placeholder.com/200')">Add to Cart</button>
             </div>
-            <!-- Add more products as needed -->
+        </div>
+    </div>
+        <div class="container">
+            <div class="products">
+                <div class="product">
+                <img src="https://via.placeholder.com/200" alt="Product Image">
+                <h3>Andy's Chips - Chutney Flavour</h3>
+                <p>Price: $10.00</p>
+                <button onclick="addToCart('Chutney Flavour', 10.00, 'https://via.placeholder.com/200')">Add to Cart</button>
+            </div>
+                <div class="product">
+                <img src="https://via.placeholder.com/200" alt="Product Image">
+                <h3>Andy's Chips - Sour Cream & Onions Flavour</h3>
+                <p>Price: $10.00</p>
+                <button onclick="addToCart('Sour Cream & Onions Flavour', 10.00, 'https://via.placeholder.com/200')">Add to Cart</button>
+            </div>
         </div>
     </div>
     <script>
