--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <div class="container">
         <div class="hero">
             <h2>Andy's Chips</h2>
-            <p><i>Your</i> <b><font color="#f32170">one-stop</font></b> <i>shop for all your chip needs.</i></p>
+            <p><i>🫵 Your 🫵</i> <b><font color="#f32170">one-stop</font></b> <i>shop for all your chip needs.</i></p>
         </div>
     </div>
     <div class="container">
