Changed icon placement

--- a/products.html
+++ b/products.html
@@ -79,7 +79,7 @@
             height: 48.4px; /* Adjust this value to control the logo size */
             width: auto;
             margin-right: 5px;
-            vertical-align: middle;
+            vertical-align: left;
         }
         .header #branding h1 {
             margin: 0;
