Changed icon _again_
changed margin-right from 5px to 2px

--- a/products.html
+++ b/products.html
@@ -78,8 +78,8 @@
         .header #branding img {
             height: 48.4px; /* Adjust this value to control the logo size */
             width: auto;
-            margin-right: 5px;
-            vertical-align: left;
+            margin-right: 2px;
+            vertical-align: middle;
         }
         .header #branding h1 {
             margin: 0;
