Removed clickable icon

--- a/products.html
+++ b/products.html
@@ -133,7 +133,7 @@
     <header class="header">
         <div class="container">
             <div id="branding">
-                <a href="index.html"><img src="images/logo.png" alt="Andy's Chips">
+                <img src="images/logo.png" alt="Andy's Chips">
                 <h1>Andy's Chips</h1>
             </div>
             <nav>
