--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Andy's Chips</title>
+    <title>Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="images/logo.png" type="image/png">
     <style>
@@ -28,7 +28,7 @@
             margin: 0;
             padding: 0;
             background: linear-gradient(to right, #00ff22, 
-                   #23cf8d); 
+                   #23cf8d, #005bb5); 
         }
         h1 { 
             position: left; 
@@ -55,8 +55,8 @@
 
             font-size: 40px; 
             font-family: 'Uni Sans', Arial, sans-serif;
-            background: linear-gradient(to right, #0044ff, 
-                    #00fff2); 
+            background: linear-gradient(to right, #0B2545, 
+            #13315C); 
             -webkit-text-fill-color: transparent; 
             -webkit-background-clip: text; 
         }
@@ -79,6 +79,7 @@
             text-decoration: none;
             text-transform: uppercase;
             font-size: 18px;
+            font-family: 'Uni Sans Bold', Arial, sans-serif;
         }
         .header ul {
             padding: 0;
@@ -96,7 +97,7 @@
             float: left;
         }
         .header #branding img {
-            height: 47.6px; /* Adjust this value to control the logo size */
+            height: 47.6px;
             width: auto;
             margin-right: 5px;
             vertical-align: middle;
@@ -110,6 +111,32 @@
         .header nav {
             float: right;
             margin-top: 10px;
+        }
+        .products {
+            display: flex;
+            flex-wrap: wrap;
+            margin-top: 20px;
+        }
+        .product {
+            background: #4b4b4b;
+            border: 3px solid #ddd;
+            border-radius: 4px;
+            padding: 20px;
+            margin: 10px;
+            flex: 1 1 calc(33% - 40px);
+            box-sizing: border-box;
+            text-align: center;
+        }
+        .product img {
+            max-width: 23%;
+            height: auto;
+        }
+        .product h4 {
+            font-family: 'Uni Sans Bold', Arial, sans-serif;
+            margin: 10px 0;
+        }
+        .product p {
+            margin: 10px 0;
         }
         .hero {
             text-align: center;
@@ -125,7 +152,7 @@
         }
         .hero h3 {
             float: center;
-            font-size: 34px;
+            font-size: 42px;
             font-family: 'Uni Sans Bold', Arial, sans-serif;
         }
         .hero p {
@@ -140,8 +167,8 @@
     <header class="header">
         <div class="container">
             <div id="branding">
-                <img src="images/logo.png" alt="A's-C Logo">
-                <h1>Andy's Chips</h1>
+                <img src="images/logo.gif" alt="A's-C Logo">
+                <h1>Andy's Chips ©</h1>
             </div>
             <nav>
                 <ul>
@@ -155,7 +182,7 @@
     </header>
     <div class="container">
         <div class="hero">
-            <h2>Andy's Chips</h2>
+            <h2>Andy's Chips ©</h2>
             <p><i>🫵 Your 🫵</i> <b><font color="#f32170">one-stop</font></b> <i>shop for all your chip needs.</i></p>
         </div>
     </div>
@@ -163,11 +190,23 @@
         <div class="hero">
             <h3>Top Picks:</h3>
         </div>
+        <div class="container">
+            <div class="products">
+                <div class="product">
+                    <img src="https://via.placeholder.com/200" alt="Product Image">
+                    <h4>Andy's Chips - Salt & Vinager Flavour</h4>
+                </div>
+                <div class="product">
+                    <img src="https://via.placeholder.com/200" alt="Product Image">
+                    <h4>Andy's Chips - Barbeque Flavour</h4>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="container">
         <div class="hero">
             <h2>What we offer:</h2>
-            <p>We offer the best experience that any customer can ask for, and we look forward to give the best experience!<br>What we also offer:</br></p>
+            <p>We offer the best experience that any customer can ask for, and we look forward to give the best experience!<br>What we also offer:<br><br>► The best Customer Care ◄<br><br>► The best Customer Service ◄</br></p>
         </div>
     </div>
 </body>
