--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
             float: left;
         }
         .header #branding img {
-            height: 40px;
+            height: 47.6px;
             width: auto;
-            margin-right: 5px;
-            vertical-align: middle;
+            margin-right: 2px;
+            vertical-align: left;
         }
         .header #branding h1 {
             margin: 0;
