--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <header class="header">
         <div class="container">
             <div id="branding">
-                <img src="images/logo.gif" alt="A's-C Logo">
+                <img src="images/logo.png" alt="A's-C Logo">
                 <h1>Andy's Chips ©</h1>
             </div>
             <nav>
