--- a/index.html
+++ b/index.html
@@ -27,36 +27,35 @@
             font-family: 'Uni Sans', Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to right, #00ff22, 
-                   #23cf8d, #005bb5); 
+            background: linear-gradient(270deg, #00ff22, #23cf8d, #005bb5);
+            background-size: 600% 600%;
+            animation: GradientAnimation 16s ease infinite;
         }
-        h1 { 
-            position: left; 
 
+        @keyframes GradientAnimation {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        h1 { 
             font-size: 40px; 
             font-family: 'Uni Sans', Arial, sans-serif;
-            background: linear-gradient(to right, #f32170, 
-                    #ff6b08, #cf23cf, #eedd44); 
+            background: linear-gradient(to right, #f32170, #ff6b08, #cf23cf, #eedd44); 
             -webkit-text-fill-color: transparent; 
             -webkit-background-clip: text; 
         }
         h2 { 
-            position: left; 
-
             font-size: 40px; 
             font-family: 'Uni Sans', Arial, sans-serif;
-            background: linear-gradient(to right, #f32170, 
-                    #ff6b08, #cf23cf); 
+            background: linear-gradient(to right, #f32170, #ff6b08, #cf23cf); 
             -webkit-text-fill-color: transparent; 
             -webkit-background-clip: text; 
         }
         h3 { 
-            position: left; 
-
             font-size: 40px; 
             font-family: 'Uni Sans', Arial, sans-serif;
-            background: linear-gradient(to right, #0B2545, 
-            #13315C); 
+            background: linear-gradient(to right, #0B2545, #13315C); 
             -webkit-text-fill-color: transparent; 
             -webkit-background-clip: text; 
         }
@@ -68,11 +67,12 @@
         .header {
             background: #333;
             color: #ffffff;
-            padding-top:0px;
+            padding-top: 0px;
             min-height: 90px;
             border-bottom: #0779e4 10px solid;
             display: flex;
             align-items: center;
+            flex-wrap: wrap;
         }
         .header a {
             color: #000000;
@@ -89,28 +89,24 @@
             align-items: center;
         }
         .header li {
-            float: left;
             display: inline;
-            padding: 0 20px 0 20px;
+            padding: 0 20px;
         }
         .header #branding {
-            float: left;
+            display: flex;
+            align-items: center;
         }
         .header #branding img {
             height: 47.6px;
             width: auto;
-            margin-right: 2px;
-            vertical-align: left;
+            margin-right: 10px;
         }
         .header #branding h1 {
             margin: 0;
             font-family: 'Uni Sans Bold', Arial, sans-serif;
-            display: inline-block;
-            vertical-align: middle;
         }
         .header nav {
-            float: right;
-            margin-top: 10px;
+            margin-left: auto;
         }
         .products {
             display: flex;
@@ -128,7 +124,7 @@
             text-align: center;
         }
         .product img {
-            max-width: 23%;
+            max-width: 100%;
             height: auto;
         }
         .product h4 {
@@ -151,15 +147,73 @@
             font-family: 'Uni Sans Bold', Arial, sans-serif;
         }
         .hero h3 {
-            float: center;
             font-size: 42px;
             font-family: 'Uni Sans Bold', Arial, sans-serif;
         }
         .hero p {
             font-size: 32px;
         }
-        .hero p2 {
-            font-size: 32px;
+
+        @media (max-width: 1200px) {
+            .product {
+                flex: 1 1 calc(50% - 40px);
+            }
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                width: 90%;
+            }
+            .header {
+                flex-direction: column;
+                text-align: center;
+            }
+            .header ul {
+                flex-direction: column;
+                padding: 10px 0;
+            }
+            .header li {
+                padding: 10px 0;
+            }
+            .products {
+                flex-direction: column;
+                align-items: center;
+            }
+            .product {
+                flex: 1 1 100%;
+                max-width: 90%;
+            }
+            .hero h1, .hero h2, .hero h3 {
+                font-size: 36px;
+            }
+            .hero p {
+                font-size: 24px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .header {
+                padding-top: 10px;
+            }
+            .header #branding {
+                flex-direction: column;
+            }
+            .header #branding img {
+                margin: 0 auto;
+            }
+            .header #branding h1 {
+                font-size: 24px;
+                text-align: center;
+            }
+            .header nav {
+                margin-top: 10px;
+            }
+            .hero h1, .hero h2, .hero h3 {
+                font-size: 28px;
+            }
+            .hero p {
+                font-size: 20px;
+            }
         }
     </style>
 </head>
@@ -194,7 +248,7 @@
             <div class="products">
                 <div class="product">
                     <img src="https://via.placeholder.com/200" alt="Product Image">
-                    <h4>Andy's Chips - Salt & Vinager Flavour</h4>
+                    <h4>Andy's Chips - Salt & Vinegar Flavour</h4>
                 </div>
                 <div class="product">
                     <img src="https://via.placeholder.com/200" alt="Product Image">
@@ -206,7 +260,7 @@
     <div class="container">
         <div class="hero">
             <h2>What we offer:</h2>
-            <p>We offer the best experience that any customer can ask for, and we look forward to give the best experience!<br>What we also offer:<br><br>► The best Customer Care ◄<br><br>► The best Customer Service ◄</br></p>
+            <p>We offer the best experience that any customer can ask for, and we look forward to giving the best experience!<br>What we also offer:<br><br>► The best Customer Care ◄<br><br>► The best Customer Service ◄</br></p>
         </div>
     </div>
 </body>
